RESOLVED FIXED213759
Fix build when !ENABLE(ACCESSIBILITY) after r263673
https://bugs.webkit.org/show_bug.cgi?id=213759
Summary Fix build when !ENABLE(ACCESSIBILITY) after r263673
Stephan Szabo
Reported 2020-06-29 16:02:51 PDT
!ENABLE(ACCESSIBILITY) definition of handleModalChange doesn't match updated declaration, looks like it should be Element& rather than Element*.
Attachments
Patch (1.48 KB, patch)
2020-06-29 16:05 PDT, Stephan Szabo
no flags
Stephan Szabo
Comment 1 2020-06-29 16:05:07 PDT
EWS
Comment 2 2020-06-29 18:49:51 PDT
Committed r263717: <https://trac.webkit.org/changeset/263717> All reviewed patches have been landed. Closing bug and clearing flags on attachment 403129 [details].
Radar WebKit Bug Importer
Comment 3 2020-06-29 18:50:18 PDT
Note You need to log in before you can comment on or make changes to this bug.