Fix build when !ENABLE(ACCESSIBILITY) after r263673 https://bugs.webkit.org/show_bug.cgi?id=213759

Reviewed by Chris Fleizach.

No new tests, build fix.

* accessibility/AXObjectCache.h:


Canonical link: https://commits.webkit.org/226565@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@263717 268f45cc-cd09-0410-ab3c-d52691b4dbfc